categori ordering and configuration for it

--- a/language/en-GB/en-GB.mod_hcatfilter.ini
+++ b/language/en-GB/en-GB.mod_hcatfilter.ini
@@ -7,6 +7,14 @@ MOD_HCATFILTER_XML_DESCRIPTION="This Module display a cattegory filter of Joomla
 
 MOD_HCATFILTER_ROOT_CAT_LABEL="Main category"
 MOD_HCATFILTER_ROOT_CAT_DESC="Category children form which will be used for build hierarchical select"
+MOD_HCATFILTER_ORDERING_LABEL="Categories ordering"
+MOD_HCATFILTER_ORDERING_DESC="Categories ordering in the select list"
+MOD_HCATFILTER_ORDERING_DIRECTION_LABEL="Ordering direction"
+MOD_HCATFILTER_ORDERING_DIRECTION_DESC="Ordering direction"
+MOD_HCATFILTER_ORDERING_DIRECTION_ASCENDING="Ascending"
+MOD_HCATFILTER_ORDERING_DIRECTION_DESCENDING="Descending"
+MOD_HCATFILTER_ORDERING_CREATED_TIME="Created ime"
+MOD_HCATFILTER_ORDERING_MODIFIED_TIME="Modified time"
 MOD_HCATFILTER_TEXT_BEFORE_LABEL="Text before"
 MOD_HCATFILTER_TEXT_AFTER_LABEL="Text after"
 MOD_HCATFILTER_ASSIGN_MENU_LABEL="Assign result"
@@ -14,7 +22,7 @@ MOD_HCATFILTER_ASSIGN_MENU_DESC="Whether assign the filter results to menu item"
 MOD_HCATFILTER_MENU_ITEM_LABEL="Menu item"
 MOD_HCATFILTER_MENU_ITEM_DESC="Select menu item for assign filter result. Better use item that have category listing"
 MOD_HCATFILTER_LABELS_LABEL="Labels"
-MOD_HCATFILTER_LABELS_DESC="Labels for each select level. Separated by commas"
+MOD_HCATFILTER_LABELS_DESC="Labels for each select level. Separated by commas. Example: Level One,Level Two,Level three"
 MOD_HCATFILTER_USE_CSS_LABEL="Use default CSS"
 MOD_HCATFILTER_USE_CSS_DESC="Whether use default style, that in module"
 
