--- a/language/en-GB/en-GB.mod_hcatfilter.ini
+++ b/language/en-GB/en-GB.mod_hcatfilter.ini
@@ -25,5 +25,7 @@ MOD_HCATFILTER_LABELS_LABEL="Labels"
 MOD_HCATFILTER_LABELS_DESC="Labels for each select level. Separated by commas. Example: Level One,Level Two,Level three"
 MOD_HCATFILTER_USE_CSS_LABEL="Use default CSS"
 MOD_HCATFILTER_USE_CSS_DESC="Whether use default style, that in module"
+MOD_HCATFILTER_USE_AJAX_LABEL="Use AJAX"
+MOD_HCATFILTER_USE_AJAX_DESC="Use AJAX for load children"
 
 MOD_HCATFILTER_MAKE_CHOOSE="Make choose..."
