Add minified version of js

--- a/language/en-GB/en-GB.mod_hcatfilter.ini
+++ b/language/en-GB/en-GB.mod_hcatfilter.ini
@@ -13,7 +13,7 @@ MOD_HCATFILTER_ORDERING_DIRECTION_LABEL="Ordering direction"
 MOD_HCATFILTER_ORDERING_DIRECTION_DESC="Ordering direction"
 MOD_HCATFILTER_ORDERING_DIRECTION_ASCENDING="Ascending"
 MOD_HCATFILTER_ORDERING_DIRECTION_DESCENDING="Descending"
-MOD_HCATFILTER_ORDERING_CREATED_TIME="Created ime"
+MOD_HCATFILTER_ORDERING_CREATED_TIME="Created time"
 MOD_HCATFILTER_ORDERING_MODIFIED_TIME="Modified time"
 MOD_HCATFILTER_ASSIGN_MENU_LABEL="Assign result"
 MOD_HCATFILTER_ASSIGN_MENU_DESC="Whether assign the filter results to menu item"
