--- a/language/en-GB/en-GB.mod_hcatfilter.ini
+++ b/language/en-GB/en-GB.mod_hcatfilter.ini
@@ -1,5 +1,4 @@
-; Fedik "Hierarchical Category Filter"
-; License GNU General Public License version 3 or later;
+; "Hierarchical Category Filter"
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
 MOD_HCATFILTER="Hierarchical Category Filter"
@@ -21,8 +20,6 @@ MOD_HCATFILTER_MENU_ITEM_LABEL="Menu item"
 MOD_HCATFILTER_MENU_ITEM_DESC="Select menu item for assign filter result. Better use item that have category listing"
 MOD_HCATFILTER_LABELS_LABEL="Labels"
 MOD_HCATFILTER_LABELS_DESC="Labels for each select level. Separated by commas. Example: Level One,Level Two,Level three"
-MOD_HCATFILTER_USE_CSS_LABEL="Use default CSS"
-MOD_HCATFILTER_USE_CSS_DESC="Whether use default style, that in module"
 MOD_HCATFILTER_USE_AJAX_LABEL="Use AJAX"
 MOD_HCATFILTER_USE_AJAX_DESC="Use AJAX for load children"
 
